--- a/Smartlab-Videos-Overview.tex
+++ b/Smartlab-Videos-Overview.tex
@@ -538,16 +538,16 @@ Description: Experiment for the Triangulation with the FabsScan 100 - first live
 
 
 
-\listoftables
+%\listoftables
 %\addcontentsline{toc}{chapter}{\listtablename}
-\listoffigures
+%\listoffigures
 
 
-\printbibliography[heading=bibintoc]
+%\printbibliography[heading=bibintoc]
 %\printbibliography[heading=bibnumbered]
-\printindex % Index drucken
+%\printindex % Index drucken
 
-\printnomenclature
+%\printnomenclature
 %
 
 \end{document}
