--- a/Smartlab-Videos-Overview.tex
+++ b/Smartlab-Videos-Overview.tex
@@ -536,6 +536,11 @@ Description: It is shown how to cut a simple geometry, a star and how to engrave
 \href{https://youtu.be/GYzbqOBqjh4}{"2018\_04\_20 Privatissimum Smartlab" URL:https://youtu.be/GYzbqOBqjh4}
 
 Description: Experiment for the Triangulation with the FabsScan 100 - first live Cast in the smartlab.
+\begin{itemize}
+\item  Experiment for the Triangulation with the FabsScan 100  from Mr. F. Yuchen
+\item Sensor news with the robot car from Mr. Y. Shi
+
+\end{itemize} 
 
 \includegraphics[scale=0.5]{img/Privatissimum1a.JPG} 
 
