--- a/Smartlab-Videos-Overview.tex
+++ b/Smartlab-Videos-Overview.tex
@@ -545,7 +545,7 @@ The document is divided in the following sections:
 
 \paragraph{Teaching Videos} describe the different machines in the smartlab.
 
-\paragraph{Project Videos} contain videos regarding the individual projects done mostly be students in the smartlab
+\paragraph{Project Videos} contain videos regarding the individual projects done mostly by students in the smartlab.
 
 \paragraph{Public Live Casts} contain videos that shall show in a live cast manner, activities or typical possible things that can be done in the smartlab by nearly everyone.
 
