--- a/Smartlab-Videos-Overview.tex
+++ b/Smartlab-Videos-Overview.tex
@@ -543,11 +543,11 @@ The document is divided in the following sections:
 \item Privatissimunm
 \end{itemize}
 
-\paragraph{Teaching Videos} describe the different machines in the smartlab.
+\paragraph{Teaching Videos} describes the different machines in the smartlab.
 
-\paragraph{Project Videos} contain videos regarding the individual projects done mostly by students in the smartlab.
+\paragraph{Project Videos} contains videos regarding the individual projects done mostly by students in the smartlab.
 
-\paragraph{Public Live Casts} contain videos that shall show in a live cast manner, activities or typical possible things that can be done in the smartlab by nearly everyone.
+\paragraph{Public Live Casts} contains videos that shall show in a live cast manner, activities or typical possible things that can be done in the smartlab by nearly everyone.
 
 \paragraph{Privatissimun} contains the live workflow of the project work, which casually documents the student's project work in the smartlab and around.
 
