--- a/Smartlab-Videos-Overview.tex
+++ b/Smartlab-Videos-Overview.tex
@@ -568,7 +568,16 @@ Description: It is shown how to cut a simple geometry, a star and how to engrave
 
 %\chapter{Public Live Casts}
 
-%\chapter{Project-Videos}
+\chapter{Project-Videos}
+
+\section{RobotCar}
+
+
+\paragraph{Description:} This Project from Mr. Shi Yuhao is about a robot car that can be made in the smartlab. Several protototypes are made as well as as workshop to build it.
+
+\href{https://youtu.be/fqgjylL5hfc}{"2018\_04\_25\_RobotCar\_EllipseandLine" URL:https://youtu.be/fqgjylL5hfc}  
+
+
 \chapter{Privatissimum SS18}
 
 \section{2018\_04\_20 Privatissimum Smartlab}
