--- a/Smartlab-Videos-Overview.tex
+++ b/Smartlab-Videos-Overview.tex
@@ -604,8 +604,10 @@ and
 
 Description: Discussion of Ukulele Project, Triangulation Experiments, RobotCar
 
+\section{2018\_04\_30\_SS18\_Privatissimum\_BII\_08}
+\href{https://vc.fh-kaernten.at/ps5vgrnv711b/}{2018\_04\_30\_SS18\_Privatissimum\_BII\_08 \\ "Url: https://vc.fh-kaernten.at/ps5vgrnv711b/"}
 
-
+Description: Privatissimum 30.4.2018
 
 %\chapter*{Einleitung und Motivation}
 
