--- a/Smartlab-Videos-Overview.tex
+++ b/Smartlab-Videos-Overview.tex
@@ -538,7 +538,7 @@ Description: Image Video of the Smartlab
 The document is divided in the following sections:
 \begin{itemize}
 \item Teaching Videos
-\item Public Live Casts (in future - soob coming)
+\item Public Live Casts (in future - soon coming)
 \item Project Videos (in future - soon coming)
 \item Privatissimunm
 \end{itemize}
